add android sources & docs archives

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -28,3 +28,23 @@ dependencies {
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
     provided 'com.google.code.findbugs:jsr305:2.0.3'
 }
+
+task androidJavadocs(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+    classifier = 'javadoc'
+    from androidJavadocs.destinationDir
+}
+
+task androidSourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+
+artifacts {
+    archives androidSourcesJar
+    archives androidJavadocsJar
+}
