--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
@@ -20,6 +19,9 @@ plugins {
     id "com.bmuschko.nexus" version "2.3.1"
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
+}
 
 allprojects {
     group = GROUP
