--- a/fogger/build.gradle
+++ b/fogger/build.gradle
@@ -56,7 +56,6 @@ retrolambda {
 
 apply from: "${rootDir}/gradle/fixTestJavaResourcesMissing.gradle"
 
-apply plugin: 'io.codearte.nexus-staging'
 
 dependencies {
     compile 'com.android.support:support-v4:19.0.1'
@@ -82,61 +81,4 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-task androidJavadocs(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    classifier = 'javadoc'
-    from androidJavadocs.destinationDir
-}
-
-task androidSourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.sourceFiles
-}
-
-artifacts {
-    archives androidSourcesJar
-    archives androidJavadocsJar
-}
-
-afterEvaluate {
-    androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
-}
-
-nexusStaging {
-    packageGroup = "pl.allegro"
-    numberOfRetries = 15
-    delayBetweenRetriesInMillis = 5000
-}
-
-modifyPom {
-    project {
-        name 'Fogger'
-        description 'Library to blur bacground under commons Android UI components.'
-        url 'https://github.com/allegro/fogger'
-        inceptionYear '2015'
-
-        scm {
-            url 'https://github.com/allegro/fogger'
-            connection 'scm:git@github.com:allegro/fogger.git'
-            developerConnection 'scm:git@github.com:allegro/fogger.git'
-        }
-
-        licenses {
-            license {
-                name 'The Apache Software License, Version 2.0'
-                url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            }
-        }
-
-        developers {
-            developer {
-                id 'pawelByszewski'
-                name 'Pawel Byszewski'
-            }
-        }
-    }
-}
+apply from: rootProject.file('gradle/mvn-publish.gradle')
