--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,13 @@
-GROUP = pl.allegro.fogger
+VERSION_CODE=1
+GROUP=pl.allegro.android
+
+POM_DESCRIPTION=Library to blur background under commons Android UI components.
+POM_URL=https://github.com/allegro/fogger
+POM_SCM_URL=https://github.com/allegro/fogger
+POM_SCM_CONNECTION=scm:git@github.com:allegro/fogger.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:allegro/fogger.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=pawelByszewski
+POM_DEVELOPER_NAME=Pawel Byszewski
