change mechanism to release lib to mvn central

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 VERSION_CODE=1
-GROUP=pl.allegro.android
+GROUP=eu.softisland.android
 
 POM_DESCRIPTION=Library to blur background under commons Android UI components.
 POM_URL=https://github.com/allegro/fogger
