--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 VERSION_CODE=1
-GROUP=eu.softisland.android
+GROUP=pl.allegro.android
 
 POM_DESCRIPTION=Library to blur background under commons Android UI components.
 POM_URL=https://github.com/allegro/fogger
