[rxjava] remove BlurringTask

--- a/fogger/build.gradle
+++ b/fogger/build.gradle
@@ -60,6 +60,8 @@ apply from: "${rootDir}/gradle/fixTestJavaResourcesMissing.gradle"
 dependencies {
     compile 'com.android.support:support-v4:19.0.1'
     compile 'org.apache.commons:commons-lang3:3.3.2'
+    compile 'io.reactivex:rxandroid:0.25.0'
+    compile 'io.reactivex:rxjava-async-util:0.21.0'
     testCompile 'com.android.support:support-v8:19.0.1'
     testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile 'org.hamcrest:hamcrest-integration:1.1'
